@@ -44,7 +44,7 @@
 		// for DrawShadowedBox()
 #	include "../cnctdlg.h"
 		// for MeleeConnectDialog()
-#endif
+#endif  /* defined (NETPLAY) */
 #include "../resinst.h"
 #include "../settings.h"
 #include "../setup.h"
@@ -2501,6 +2501,8 @@ Melee_LocalChange_team (MELEE_STATE *pMS, size_t teamNr,
 
 ///////////////////////////////////////////////////////////////////////////
 
+#ifdef NETPLAY
+
 // Send the entire team to the remote side. Used when the connection has
 // just been established, or after the setup menu is reentered after battle.
 void
@@ -2536,7 +2538,6 @@ Melee_bootstrapSyncTeam (MELEE_STATE *meleeState, size_t teamNr)
 // The behavior of these functions (and the comments therein) follow the
 // description in doc/devel/netplay/protocol.
 
-#ifdef NETPLAY
 void
 Melee_RemoteChange_ship (MELEE_STATE *pMS, NetConnection *conn, COUNT side,
 		FleetShipIndex index, MeleeShip ship)
